# rust-mumble-protocol

./: Cargo.toml
src/: control.rs  crypt.rs  lib.rs  varint.rs  voice.rs
