[package]
name = "mumble-protocol-2x"
version = "0.5.0"
authors = [
  "Marco Rebhan <me@dblsaiko.net>",
  "Jonas Herzig <me@johni0702.de>"
]
edition = "2018"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/2xsaiko/rust-mumble-protocol"

[features]
default = ["openssl", "tokio-codec"]
webrtc-extensions = []
tokio-codec = ["tokio-util"]

[build-dependencies]
protobuf-codegen-pure = "2.25"

[dependencies]
bytes = "1.0"
byteorder = "1"
tokio-util = { version = "0.6", features = ["codec"], optional = true }
asynchronous-codec = { version = "0.6.0", optional = true }
protobuf = "2"
openssl = { version = "0.10", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
argparse = "0.2"
futures = "0.3"
native-tls = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
tokio-native-tls = "0.3"
